--- a/W6D4/css-friends-part-1/css/00-reset.css
+++ b/W6D4/css-friends-part-1/css/00-reset.css
@@ -5,9 +5,45 @@ ul, li, strong, main, button, i,
 section, img, div, h2, p, form,
 fieldset, label, input, textarea,
 span, article, footer, time, small {
-
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font: inherit;
+  color: inherit;
+  text-align: inherit;
+  text-decoration: inherit;
+  vertical-align: inherit;
   box-sizing: inherit;
+  background: transparent;
   
+}
+
+ul {
+  list-style: none;
+}
+
+input[type="password"],
+input[type="email"],
+input[type="text"],
+input[type="submit"],
+textarea,
+button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+button,
+input[type="submit"] {
+  cursor: pointer;
+}
+
+/* Clearfix */
+
+.group:after {
+  content: "";
+  display: block;
+  clear: both;
 }
 img {
     display: block;
@@ -17,26 +53,4 @@ img {
 
 li {
     list-style-type:  none;
-}
-ul {
-
-}
-
-button {
-    cursor: pointer;
-}
-
-
-input[type="password"],
-input[type="email"],
-input[type="text"],
-input[type="submit"],
-textarea,
-button {
-
-}
-
-button,
-input[type="submit"] {
-
 }
