--- a/W6D5/cats_99/app/views/cats/index.html.erb
+++ b/W6D5/cats_99/app/views/cats/index.html.erb
@@ -1,2 +1,28 @@
 
+<table>
+    <thead>
+        <tr>
+            <th colspan="6"> Cats </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <%Cat.attributes.each do |attr_name|%>
+              <td><%=attr_name%></td>
+            <% end %>
 
+        </tr>
+      <%@cats.each do |cat|%>
+        <tr>
+          <%cat.attributes.each do |attr_name, attr_value| %>
+          <% if attr_name == "name" %>
+              <td><a href="<%="/cats/#{cat.id}"%>"><%=attr_value%></a>
+            <% else %>
+              <td><%=attr_value%></td>
+          <% end %>  
+          <% end %>
+        </tr>
+      <% end %>
+        
+    </tbody>
+</table>
