work on session and login

--- a/W7D1/99_cats_2_authentication/app/views/layouts/application.html.erb
+++ b/W7D1/99_cats_2_authentication/app/views/layouts/application.html.erb
@@ -9,6 +9,24 @@
   </head>
 
   <body>
+    <h1>Welcome, <%= @current_user.username %></h1>
+
+    <% if @current_user.nil? %>
+      <% _action_value = session_url %>
+      <% _submit_value = "login" %>
+    <% else %>
+      <% _action_value = new_user_url %>
+      <% _submit_value = "sign up" %>
+    <% end %>
+    <form action="<%=_action_value%>" method="POST">
+
+
+      <input type="submit">
+
+
+    </form>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
