--- a/W7D1/99_cats_2_authentication/app/views/layouts/application.html.erb
+++ b/W7D1/99_cats_2_authentication/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
 
 
-  <% unless current_user.nil? %>
+  <% if logged_in? %>
     <h2>Welcome, <%=current_user.username %>!</h2>
 
 	<form action="<%=session_url%>" method="POST">
