--- a/W7D2/music_app/app/views/users/new.html.erb
+++ b/W7D2/music_app/app/views/users/new.html.erb
@@ -1,6 +1,8 @@
 <h1>George Washington</h1>
 
 <form action="<%= users_url %>" method="POST">
+  <%= auth_token %>
+
   <label>Email: 
     <input type="text" name="user[email]">
   </label>
