--- a/W7D2/music_app/app/views/users/new.html.erb
+++ b/W7D2/music_app/app/views/users/new.html.erb
@@ -10,7 +10,7 @@
   <br>
 
   <label>Password: 
-    <input type="password" name="user[password]">
+    <input type="text" name="user[password]">
   </label>
 
   <br>
