--- a/W7D2/music_app/app/views/layouts/application.html.erb
+++ b/W7D2/music_app/app/views/layouts/application.html.erb
@@ -10,6 +10,31 @@
   </head>
 
   <body>
+<!--- buttons here --->
+
+  <% if logged_in? %>
+  <h2> Welcome to our Music App, <%= current_user.email %> </h2>
+  
+  <form action=<%=session_url%> method="POST">
+
+    <input type ="hidden" name = "_method" value = "DELETE">
+    <%=auth_token%>
+    <input type="submit" value="SIGN OUT">
+  </form>
+  <% else %>
+  <a href="<%=new_user_url%>">SIGN UP</a> 
+
+  <a href="<%=new_session_url%>">SIGN IN</a> 
+  
+  <% end %>
+  
+
     <%= yield %>
+   
+    <% if flash[:error] %> 
+	    <% flash[:error].each do | error| %>
+	    <%= error %> <br>
+      <% end %>
+    <% end %>
   </body>
 </html>
