--- a/W7D2/music_app/app/assets/stylesheets/application.css
+++ b/W7D2/music_app/app/assets/stylesheets/application.css
@@ -13,3 +13,32 @@
  *= require_tree .
  *= require_self
  */
+* {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.header > h1 {
+  font-size: 45px;
+  font-family: inherit;
+}
+
+.header_div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 700px;
+  justify-items: right;
+  justify-content:right;
+}
+
+.header_div > .button_navigation {
+  justify-self: right;
+  align-self: flex-end;
+  justify-content: right;
+  justify-items: right;
+  align-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
