--- a/W7D2/music_app/app/views/layouts/application.html.erb
+++ b/W7D2/music_app/app/views/layouts/application.html.erb
@@ -4,29 +4,39 @@
     <title>MusicApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+
+  <header>
+  
+    <h1>Music App</h1>
+  
+  
+  </header>
   <body>
 <!--- buttons here --->
 
   <% if logged_in? %>
   <h2> Welcome to our Music App, <%= current_user.email %> </h2>
-  
-  <form action=<%=session_url%> method="POST">
+  <div class="header_div">
+    <nav class="button_navigation">
+    
+      <form action=<%=session_url%> method="POST">
+        <input type ="hidden" name = "_method" value = "DELETE">
+        <%=auth_token%>
+        <input type="submit" value="SIGN OUT">
+      </form>
 
-    <input type ="hidden" name = "_method" value = "DELETE">
-    <%=auth_token%>
-    <input type="submit" value="SIGN OUT">
-  </form>
-  <% else %>
-  <a href="<%=new_user_url%>">SIGN UP</a> 
+      <% else %>
+      <a href="<%=new_user_url%>">SIGN UP</a> 
 
-  <a href="<%=new_session_url%>">SIGN IN</a> 
-  
-  <% end %>
+      <a href="<%=new_session_url%>">SIGN IN</a> 
+      
+      <% end %>
+    </nav> 
+  </div>
   
 
     <%= yield %>
