--- a/W7D2/music_app/app/views/bands/new.html.erb
+++ b/W7D2/music_app/app/views/bands/new.html.erb
@@ -1,6 +1,6 @@
 
 <h1> New Band!!! </h1>
 
-<%= render "form", band: @band, type: :new %>
+<%= render "form", band: @band, type: :new, http_method: POST %>
 
 
