fix design issues solve log out issue add route catch all for bad url

--- a/W7D2/music_app/app/views/layouts/application.html.erb
+++ b/W7D2/music_app/app/views/layouts/application.html.erb
@@ -39,11 +39,13 @@
   
 
     <%= yield %>
-   
+    <br>
+    <div class="errors">
     <% if flash[:error] %> 
 	    <% flash[:error].each do | error| %>
 	    <%= error %> <br>
       <% end %>
     <% end %>
+    </div>
   </body>
 </html>
