working on adding a nested route album new

--- a/W7D2/music_app/app/views/bands/index.html.erb
+++ b/W7D2/music_app/app/views/bands/index.html.erb
@@ -3,6 +3,7 @@
 <h3>Bands Home Page!</h3>
 
 <%=render "display_bands", bands: @bands, type: :index%>
-<br><br><br>
+<br><br>
 
 <a href="<%=new_band_url%>">Add new band</a>
+<a href=<%=new_album_url%>>Add an album</a>
