--- a/W7D2/music_app/app/assets/stylesheets/application.css
+++ b/W7D2/music_app/app/assets/stylesheets/application.css
@@ -20,6 +20,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap');
 
 
+table, th, td{
+  border: 1px solid black;
+}
 header > h1 {
   font-size: 45px;
   font-family: 'Yellowtail';
