--- a/W7D2/music_app/app/views/bands/_display_bands.html.erb
+++ b/W7D2/music_app/app/views/bands/_display_bands.html.erb
@@ -2,12 +2,13 @@
 <table> 
   <tr>
     <th>Band name</th>
+    <th>Albums</th>
     <th></th>
   </tr>
   <% bands.each do |band| %>
     <tr>
     <td><a href="<%=band_url(band)%>"> <%= band.name %> </a> </td>
-    <td><a href="<%=show_bands_albums_url(band)%>"> [||||||||]</a>
+    <td><a href="<%=show_bands_albums_url(band)%>"> ••••••••••</a>
   </tr>
 <% end %>
 
