add css style to main_nav partial

--- a/W7D4/aa-times/app/assets/stylesheets/components/_main_nav.scss
+++ b/W7D4/aa-times/app/assets/stylesheets/components/_main_nav.scss
@@ -38,7 +38,19 @@
   }
 }
 
-.left-nav > ul > li:hover,
-.right-nav > ul > li:last-of-type:hover {
-
+.left-nav > ul > li:hover{
+  color: lightgray;
 }
+.right-nav > ul > li:last-of-type:hover {
+  background-color: #004558;
+  border: #020241;
+  color: navajowhite;
+}
+
+
+
+
+
+
+
+
