--- a/W7D4/aa-times/app/views/shared/_main_nav.html.erb
+++ b/W7D4/aa-times/app/views/shared/_main_nav.html.erb
@@ -11,4 +11,16 @@
 			</li>
 		</ul>
 	</nav>
+
+  <nav class="right-nav">
+    <ul>
+      <li id="subscribe-now-button">
+		    <i class="subscribe-now"></i>
+        <span>SUBSCRIBE NOW</span>
+      </li>
+      <li id="log-in-button"><i class="log-in"></i>
+        <span>LOG IN</span>
+      </li>
+    </ul>
+  </nav>
 </header>
