--- a/W7D2/music_app/app/views/bands/show.html.erb
+++ b/W7D2/music_app/app/views/bands/show.html.erb
@@ -6,3 +6,4 @@
 
 <br><br>
 <a href="<%=edit_band_url%>">Edit this band name</a>
+<a href="<%=new_band_album_url(params[:id])%>">Add an album for this band</a>
