--- a/W7D2/music_app/app/views/layouts/application.html.erb
+++ b/W7D2/music_app/app/views/layouts/application.html.erb
@@ -36,8 +36,8 @@
     </div>
     <br>
     <div class="errors">
-    <% if flash[:error] %> 
-	    <% flash[:error].each do | error| %>
+    <% if flash[:errors] %> 
+	    <% flash[:errors].each do | error| %>
 	    <%= error %> <br>
       <% end %>
     <% end %>
