--- a/W10D2/widgets/index.css
+++ b/W10D2/widgets/index.css
@@ -43,3 +43,40 @@
 #time1, #date1{
     padding-left: 20px;
 }
+
+.tab-widget{
+  display: flex;
+  flex-direction: column;
+  width: 185px;
+  height: 140px;
+  padding: 0px;
+  margin: 0px;
+}
+
+ul{
+  align-self: flex-start;
+  margin: 0px;
+  width: 100%;
+  padding: 0px;
+  width: fit-content;
+}
+.tab-header > h1{
+  padding: 0px;
+  margin: 0px; 
+  background-color: lime;
+  display: inline;
+  border: 1px solid black;
+  border-radius: 15% 15% 0% 0%;
+  width: 70px;
+  height: 30px;
+  cursor: pointer;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.tab-content {
+  background-color: lime;
+  height: 100%;
+  text-align: center;
+  border: 1px solid black;
+}
