Add in labels for widgets

--- a/W10D2/widgets/index.css
+++ b/W10D2/widgets/index.css
@@ -126,3 +126,8 @@ ul{
 .autocomplete-widget li{
   cursor: pointer;  
 }
+
+#interactive-title{
+  display: flex;
+  align-items: space-between;
+}
